[tool.poetry]
authors = [
  "Charlie Sanders <charlie.fats@gmail.com>",
  "rbpatt2019 <rb.patterson.cross@gmail.com>",
  "PRQL Team",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
description = "Python extensions for PRQL"
homepage = "https://prql-lang.org"
license = "Apache-2.0"
name = "pyprql"
readme = "README.md"
repository = "https://github.com/prql/pyprql"
version = "0.12.1"

[tool.poetry.dependencies]
python = "^3.10"

duckdb-engine = ">=0.7,<0.14"
jupysql = ">=0.10"
pandas = ">=1.5"
polars = { version = ">= 0.20.23", optional = true }
prqlc = "^0.11.0"
traitlets = ">=5"
ipython = "^8.28.0"

[tool.poetry.extras]
polars = ["polars"]

[tool.poetry.dev-dependencies]
Sphinx = "~8.1"
coverage = "^7.6.0"
darglint = "^1.8.1"
mypy = "^1.13"
myst-parser = "^4.0.0"
nox = "^2024.10.9"
polars = ">=0.16"
pre-commit = "^4.0.1"
pytest = ">8"
# pytest-regtest compat https://gitlab.com/uweschmitt/pytest-regtest/-/merge_requests/9
py = "1.11"
pytest-clarity = "^1.0.1"
pytest-cov = "^6.0.0"
pytest-regtest = "*"
pytest-sugar = "^1.0.0"
pytest-testmon = "*"
pytest-xdist = "^3.5.0"
python-semantic-release = "^9.12.0"
ruff = "^0.7.0"
safety = "^3"
sphinx-rtd-theme = "^3.0.0"
twine = "^5.1.0"
xdoctest = "^1.2.0"

[tool.semantic_release]
branch = "main"
build_command = "poetry build"
changelog_file = "CHANGELOG.md"
major_on_zero = false
upload_to_pypi = true
upload_to_release = true
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.pytest.ini_options]
addopts = """
--xdoctest
"""

[tool.coverage.run]
branch = true
source = ["pyprql"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
disable_error_code = ["union-attr", 'operator']
files = "pyprql"
# TODO: ideally we would list the modules that aren't yet typed
ignore_missing_imports = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.3.0"]

[tool.ruff]
fix = true
[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
extend-safe-fixes = [
  "TID252", # absolute imports
]
ignore = ["E402", "E501", "E731", "UP007"]
extend-select = [
  "B",   # flake8-bugbear
  "F",   # Pyflakes
  "E",   # Pycodestyle
  "W",
  "TID", # flake8-tidy-imports (absolute imports)
  "I",   # isort
  "UP",  # Pyupgrade
]
